<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context="com.example.finalproject.ui.courses.AddEditCourseFragment">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/course_name" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/content" />

    <androidx.cardview.widget.CardView
        android:id="@+id/saveCourseCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/saveCourseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:drawablePadding="5dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_save_24" />

    </androidx.cardview.widget.CardView>


</LinearLayout>