<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.finalproject.ui.notes.AddEditNoteFragment">

    <Spinner
        android:id="@+id/coursesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/white" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/note_title" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/description" />

    <androidx.cardview.widget.CardView
        android:id="@+id/saveNoteCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/saveNoteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:drawablePadding="5dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_save_24" />

    </androidx.cardview.widget.CardView>

</LinearLayout>